--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -64,13 +64,13 @@
                         </div>
 
                         <!-- Extra -->
-                        <div class="flex items-center justify-between mt-2 mb-8 gap-8">
+                        <!-- <div class="flex items-center justify-between mt-2 mb-8 gap-8">
                             <div class="flex items-center">
                             <p-checkbox inputId="rememberme1" formControlName="rememberMe" binary class="mr-2"></p-checkbox>
                             <label for="rememberme1">Recuérdame</label>
                             </div>
                             <span class="font-medium no-underline ml-2 text-right cursor-pointer text-primary">¿Olvidaste tu contraseña?</span>
-                        </div>
+                        </div> -->
 
                         <!-- Botón con spinner integrado -->
                         <p-button
@@ -86,9 +86,9 @@
                             <p-message severity="error" [text]="form.errors?.['auth']"></p-message>
                         </div>
                     </form>
-                    <!-- <div class="text-center mt-4">
-                    <span>¿No tienes una cuenta? <a routerLink="/auth/register" class="text-primary">Regístrate</a></span>
-                    </div> -->
+                    <div class="text-center mt-4">
+                        <span>¿No tienes una cuenta? <a routerLink="/auth/register" class="text-primary font-medium hover:underline">Regístrate aquí</a></span>
+                    </div>
                 </div>
                 
             </div>
